src/compile_test/must_fail/bad_assign_1.stderr
error[E0277]: the trait bound `bounded_types::BoundedI64<0_i64, 10_i64>: From<f32>` is not satisfied
 --> $DIR/bad_assign_1.rs:4:56
  |
4 |     let _ok: BoundedI64<0,10> = (std::f32::consts::PI).into();
  |                                                        ^^^^ the trait `From<f32>` is not implemented for `bounded_types::BoundedI64<0_i64, 10_i64>`
  |
  = help: the following implementations were found:
            <bounded_types::BoundedI64<MIN, MAX> as From<i128>>
            <bounded_types::BoundedI64<MIN, MAX> as From<i16>>
            <bounded_types::BoundedI64<MIN, MAX> as From<i32>>
            <bounded_types::BoundedI64<MIN, MAX> as From<i64>>
          and 8 others
  = note: required because of the requirements on the impl of `Into<bounded_types::BoundedI64<0_i64, 10_i64>>` for `f32`
